# thriftex

cpp/: CMakeLists.txt
cpp/thriftex/base/: logging.h
cpp/thriftex/client/: bind_client_pool.h  client_pool.h  endpoint.h  ex_socket.h
cpp/thriftex/server/: ex_event_handler.cc  ex_event_handler.h
py/src/example/: PythonClient.py  PythonServer.py
py/src/example/idl/: helloWorld.thrift
py/src/example/yourprj/: __init__.py  helloWorld-remote  helloWorld.py  myhandler.py
py/src/thriftex/base/: common.py
py/src/thriftex/client/: factory.py
py/src/thriftex/server/: bootstrap.py  service.py
