CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(ThriftEx CXX)

IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE "DEBUG")
ENDIF()

SET(CXX_FLAGS
 -g
 -fPIC
 -Wall
 -Wextra
 # -Werror
 -Woverloaded-virtual
 -Wpointer-arith
 -Wwrite-strings
 -Wno-unused-parameter
 -Wno-reorder
 # -Wno-unused-variable
 -DVALGRIND
 -D_FILE_OFFSET_BITS=64
 -DHAVE_STDINT_H
 -DHAVE_NETINET_IN_H
 )

IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
  # Mac OS use clang
  LIST(APPEND CXX_FLAGS "-stdlib=libstdc++")
  SET(CMAKE_CXX_COMPILER "clang++")
ELSEIF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
  LIST(APPEND CXX_FLAGS "-rdynamic")
  SET(CMAKE_CXX_COMPILER "g++")
ENDIF()

IF(CMAKE_BUILD_BITS EQUAL 32)
  LIST(APPEND CXX_FLAGS "-m32")
ENDIF()

STRING(REPLACE ";" " " CMAKE_CXX_FLAGS "${CXX_FLAGS}")

SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -W -ggdb3 -fno-inline -fprofile-arcs -ftest-coverage")
SET(CMAKE_CXX_FLAGS_RELEASE "-O2 -finline-limit=1000 -DNDEBUG")

# Find Boost, get the base env
FIND_PACKAGE(Boost REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
FIND_LIBRARY(GLOG_LIBRARY NAMES glog)
FIND_LIBRARY(GFLAGS_LIBRARY NAMES gflags)
FIND_LIBRARY(THRIFT_LIBRARY NAMES thrift)
FIND_LIBRARY(THRIFTNB_LIBRARY NAMES thriftnb)
FIND_LIBRARY(BOOST_SYSTEM_LIBRARY NAMES boost_system)
FIND_LIBRARY(BOOST_THREAD_LIBRARY NAMES boost_thread)
FIND_LIBRARY(LIBEVENT_LIBRARY NAMES event)

LINK_LIBRARIES(${THRIFT_LIBRARY} ${THRIFTNB_LIBRARY}
  ${BOOST_SYSTEM_LIBRARY} ${BOOST_THREAD_LIBRARY}
  ${GLOG_LIBRARY} ${GFLAGS_LIBRARY}
  ${LIBEVENT_LIBRARY}
  pthread)

# Must use google code style to address the include files
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})

STRING(TOUPPER ${CMAKE_BUILD_TYPE} BUILD_TYPE)
MESSAGE(STATUS "CXX_FLAGS = " ${CMAKE_CXX_FLAGS} " " ${CMAKE_CXX_FLAGS_${BUILD_TYPE}})

# Add sub-project 

FILE(GLOB HEAD_LIST_BASE "${PROJECT_SOURCE_DIR}/thriftex/base/*.h")
MESSAGE(${HEAD_LIST_BASE})
INSTALL(FILES ${HEAD_LIST_BASE} DESTINATION include/thriftex/base/)

FILE(GLOB HEAD_LIST_CLIENT "${PROJECT_SOURCE_DIR}/thriftex/client/*.h")                       
MESSAGE(${HEAD_LIST_CLIENT})                   
INSTALL(FILES ${HEAD_LIST_CLIENT} DESTINATION include/thriftex/client)

FILE(GLOB HEAD_LIST_SERVER "${PROJECT_SOURCE_DIR}/thriftex/server/*.h")                       
MESSAGE(${HEAD_LIST_SERVER})                   
INSTALL(FILES ${HEAD_LIST_SERVER} DESTINATION include/thriftex/server)
